--- a/hello.yml
+++ b/hello.yml
@@ -1,1 +1,12 @@
+name: Hello CI
+
+on: [push]
+
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - name: Say hello
+        run: echo "¡Hola, mundo desde GitHub Actions!"
 
